--- a/src/YouTubeCheckerBundle/Resources/views/Home/index.html.twig
+++ b/src/YouTubeCheckerBundle/Resources/views/Home/index.html.twig
@@ -33,16 +33,16 @@
                                     {{ form_end(form) }}
                                 </div>
                                 <div class="hr-line-dashed"></div>
-                                <div class="search-result">
-                                    <h3><a href="#">INSPINIA IN+ Admin Theme</a></h3>
-                                    <a href="#" class="search-link">www.inspinia.com/inspinia</a>
-                                    <p>
-                                        Many desktop publishing packages and web page editors now use Lorem Ipsum as their
-                                        default model text, and a search for 'lorem ipsum' will uncover many web sites
-                                        still in their infancy. Various versions have evolved over the years, sometimes by
-                                        accident, sometimes on purpose (injected humour and the like).
-                                    </p>
-                                </div>
+                                {#<div class="search-result">#}
+                                    {#<h3><a href="#">INSPINIA IN+ Admin Theme</a></h3>#}
+                                    {#<a href="#" class="search-link">www.inspinia.com/inspinia</a>#}
+                                    {#<p>#}
+                                        {#Many desktop publishing packages and web page editors now use Lorem Ipsum as their#}
+                                        {#default model text, and a search for 'lorem ipsum' will uncover many web sites#}
+                                        {#still in their infancy. Various versions have evolved over the years, sometimes by#}
+                                        {#accident, sometimes on purpose (injected humour and the like).#}
+                                    {#</p>#}
+                                {#</div>#}
                             </div>
                         </div>
                     </div>
