--- a/src/YouTubeCheckerBundle/Resources/views/Home/index.html.twig
+++ b/src/YouTubeCheckerBundle/Resources/views/Home/index.html.twig
@@ -12,7 +12,7 @@
         <link href="{{ asset('css/style.css') }}" rel="stylesheet">
     </head>
 
-    <body>
+    <body style="background-color: #f3f3f4;">
         <div class="gray-bg container">
             <div class="wrapper wrapper-content animated fadeInRight">
                 <div class="row">
