--- a/src/YouTubeCheckerBundle/Resources/views/Home/result.html.twig
+++ b/src/YouTubeCheckerBundle/Resources/views/Home/result.html.twig
@@ -15,7 +15,7 @@
 
 </head>
 
-<body>
+<body style="background-color: #f3f3f4;">
     <div class="gray-bg container">
         <div class="wrapper wrapper-content animated fadeInRight">
             <div class="row">
